--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         />
       </a>
       <address class="address header__address">
-        <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a href="tel:+99995555555">+99995555555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>
           наб. Принсенграхт 263-<br />
@@ -58,12 +58,12 @@
             ></span
           >
         </h1>
-        <h2 class="cover__description">
+        <div class="cover__description">
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
           <button class="bet-button">Сделать ставку</button>
-        </h2>
+        </div>
       </section>
 
       <section class="lots">
