--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     <footer class="footer">
       <address class="address footer__address">
-        <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a href="tel:+99995555555">+9999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>
           наб. Принсенграхт 263-<br />
