--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </nav>
       <a class="header__logo">
         <img
-          src="/images/logo-black.svg"
+          src="./images/logo-black.svg"
           alt="logo"
           class="header__logo-image"
         />
