--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <section class="about">
         <a class="about__logo">
           <img
-            src="/images/logo-white.svg"
+            src="./images/logo-white.svg"
             alt="logo"
             class="about__logo-image"
           />
@@ -182,18 +182,18 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a href="#0" class="footer__social-link">
-            <img src="/images/yt.svg" alt="yt" class="footer__social-icon" />
+            <img src="./images/yt.svg" alt="yt" class="footer__social-icon" />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a href="#0" class="footer__social-link">
-            <img src="/images/vk.svg" alt="vk" class="footer__social-icon" />
+            <img src="./images/vk.svg" alt="vk" class="footer__social-icon" />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a href="#0" class="footer__social-link">
             <img
-              src="/images/pinterest.svg"
+              src="./images/pinterest.svg"
               alt="pinterest"
               class="footer__social-icon"
             />
