--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         />
       </a>
       <address class="address header__address">
-        <a href="tel:+99995555555">+99995555555</a>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>
           наб. Принсенграхт 263-<br />
@@ -136,10 +136,10 @@
         <div class="about__column">
           <p class="about__text">
             Здесь вы не встретите очередное пафосное собрание невероятно
-            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
-            один аукцион. Потому что кому нужен дневник девочки-подростка или
-            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
-            странные вещи, созданные любителями?
+            дорогого антиквариата. Наши лоты вообще не должны были попасть<br />
+            ни на один аукцион. Потому что кому нужен дневник девочки-подростка
+            или картина, которую может нарисовать даже ребёнок? Кому нужны все
+            эти странные вещи, созданные любителями?
           </p>
           <p class="about__text">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
@@ -155,7 +155,7 @@
 
     <footer class="footer">
       <address class="address footer__address">
-        <a href="tel:+99995555555">+9999 555 5555</a>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>
           наб. Принсенграхт 263-<br />
