--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
             <a href="#0" class="header__link header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a href="#0" class="header__link">посмотреть лоты</a>
+            <a href="#lots" class="header__link">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a href="#0" class="header__link">об аукционе</a>
+            <a href="#about" class="header__link">об аукционе</a>
           </li>
         </ul>
       </nav>
       <a class="header__logo">
         <img
           src="./images/logo-black.svg"
-          alt="logo"
+          alt="Логотип сайта"
           class="header__logo-image"
         />
       </a>
@@ -66,7 +66,7 @@
         </div>
       </section>
 
-      <section class="lots">
+      <section id="lots" class="lots">
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
@@ -123,16 +123,16 @@
         <a href="#0" class="lots__look-more-link">посмотреть больше</a>
       </section>
 
-      <section class="about">
+      <section id="about" class="about">
         <a class="about__logo">
           <img
             src="./images/logo-white.svg"
-            alt="logo"
+            alt="Логотип сайта"
             class="about__logo-image"
           />
         </a>
 
-        <h3 class="about__title">Об аукционе</h3>
+        <h2 class="about__title">Об аукционе</h2>
         <div class="about__column">
           <p class="about__text">
             Здесь вы не встретите очередное пафосное собрание невероятно
@@ -182,12 +182,12 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a href="#0" class="footer__social-link">
-            <img src="./images/yt.svg" alt="yt" class="footer__social-icon" />
+            <img src="./images/yt.svg" alt="YouTube" class="footer__social-icon" />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a href="#0" class="footer__social-link">
-            <img src="./images/vk.svg" alt="vk" class="footer__social-icon" />
+            <img src="./images/vk.svg" alt="VK" class="footer__social-icon" />
           </a>
         </li>
         <li class="footer__social-list-item">
